# RIFT-26

./: .cursorrules  .gitignore  README.md
backend/: .env.template  .gitignore  README.md  pyproject.toml
backend/app/: algorand_service.py  config.py  database.py  main.py  models.py  routes.py  schemas.py  subscriber.py
projects/contracts/: .env.template
projects/contracts/scripts/: fund_accounts.py
projects/contracts/smart_contracts/artifacts/ticketing/: EventTicketing.approval.puya.map  EventTicketing.approval.teal  EventTicketing.arc56.json  event_ticketing_client.py
projects/contracts/smart_contracts/ticketing/: deploy.py  deploy_testnet.py
projects/contracts/smart_contracts/ticketing/smart_contracts/artifacts/ticketing/: EventTicketing.approval.puya.map  EventTicketing.approval.teal  EventTicketing.arc32.json
projects/contracts/tests/: scalper_attack_test.py
projects/frontend/: .env.template  index.html  package-lock.json  package.json  tailwind.config.cjs
projects/frontend/src/: App.tsx  Home.tsx
projects/frontend/src/components/: AppCalls.tsx  AssetOptIn.tsx  Bank.tsx  CreateASA.tsx  LoadingScreen.tsx  MintNFT.tsx  MyTickets.tsx  SendAlgo.tsx  ThemeToggle.tsx  Transact.tsx
projects/frontend/src/services/: api.ts
projects/frontend/src/styles/: main.css
projects/frontend/src/utils/: handleTxnError.ts
smart_contracts/ticketing/: contract.py
